Fixing spacing

--- a/index.css
+++ b/index.css
@@ -50,7 +50,7 @@ h5 {
 }
 
 .user:nth-of-type(even) {
-  margin-top: 50px;
+  margin-top: 33px;
 }
 
 .user > .flex {
@@ -66,7 +66,7 @@ h5 {
 }
 
 .container {
-  width: 80%;
+  width: 66.67%;
   margin: 100px auto 10px auto;
 }
 
@@ -75,9 +75,10 @@ h5 {
 }
 
 .footer {
-  margin-top: 100px;
+  margin-top: 67px;
   color: hsla(0, 0%, 66%, 1);
   text-align: center;
+  font-size: 14px;
 }
 
 .footer > strong {
